--- a/PMS/accounts/templates/accounts/base.html
+++ b/PMS/accounts/templates/accounts/base.html
@@ -20,13 +20,14 @@
                 <li class="has-children account">
                     <a href="#0">
                         <img src="{% static 'img/cd-avatar.png' %}" alt="avatar">
-                        Account
+                        {{ request.user.student.user }}
+                        {{ request.user.admin.user }}
                     </a>
 
                     <ul>
                         <li><a href="#0">My Account</a></li>
                         <li><a href="#0">Edit Account</a></li>
-                        <li><a href="#">Logout</a></li>
+                        <li><a href="{% url 'auth:logout' %}?next={% url 'accounts:Index' %}">Logout</a></li>
                     </ul>
                 </li>
             </ul>
