--- a/PMS/accounts/templates/accounts/homepage.html
+++ b/PMS/accounts/templates/accounts/homepage.html
@@ -271,7 +271,7 @@
                 <form class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0" method="post" action="{% url 'accounts:StudentLogin' %}">
                    {% csrf_token %}
                     <div class="form-group">
-                        <input type="text" class="form-control input-lg" placeholder="Student ID" name="student_ID">
+                        <input type="text" class="form-control input-lg" placeholder="Student ID" name="username">
                     </div>
                     <div class="form-group">
                         <input type="password" class="form-control input-lg" placeholder="Password" name="password">
