--- a/PMS/funds/templates/funds/addpayment.html
+++ b/PMS/funds/templates/funds/addpayment.html
@@ -32,9 +32,9 @@
             <div class="wizard-container"> 
                 
                 <div class="card wizard-card ct-wizard-orange" id="wizardProfile">
-                    <form action="" method="">
+                    <form action="" method="POST">
                 <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
-                
+                        {% csrf_token %}
                         <div class="wizard-header">
                             <h3>
                                 <br>
@@ -98,21 +98,21 @@
 
 {% block js %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/homepage.js"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="{% static 'js/homepage.js' %}"></script>
 
 <!-- jQuery easing plugin --> 
 
-    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
         
     <!--   plugins   -->
-    <script src="js/jquery.bootstrap.wizard.js" type="text/javascript"></script>
+    <script src="{% static 'js/jquery.bootstrap.wizard.js' %}" type="text/javascript"></script>
     
     <!--  More information about jquery.validate here: http://jqueryvalidation.org/  -->
-    <script src="js/jquery.validate.min.js"></script>
+    <script src="{% static 'js/jquery.validate.min.js' %}"></script>
     
     <!--  methods for manipulating the wizard and the validation -->
-    <script src="js/wizard.js"></script>
+    <script src="{% static 'js/wizard.js' %}"></script>
     <script type="text/javascript">
             $(document).ready(function() {
             $(".dropdown-toggle").dropdown();
