--- a/PMS/funds/templates/funds/addproject.html
+++ b/PMS/funds/templates/funds/addproject.html
@@ -30,9 +30,9 @@
             <div class="wizard-container"> 
                 
                 <div class="card wizard-card ct-wizard-orange" id="wizardProfile">
-                    <form action="" method="">
+                    <form action="" method="POST">
                 <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
-                
+                        {% csrf_token %}
                         <div class="wizard-header">
                             <h3>
                                 <br>
