--- a/PMS/accounts/templates/accounts/base.html
+++ b/PMS/accounts/templates/accounts/base.html
@@ -31,15 +31,15 @@
                 </li>
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Funds <b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li><a href="addfunds.html">Add Fund</a></li>
-                    <li><a href="viewallfunds.html">View / Edit Fund</a></li>
-                    <li><a href="addpayment.html">Add Payment</a></li>
+                    <li><a href="{% url 'funds:AddFunds' %">Add Fund</a></li>
+                    <li><a href="{% url 'funds:ViewAllFunds' %}">View / Edit Fund</a></li>
+                    <li><a href="{% url 'funds:AddPayment' %">Add Payment</a></li>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Project <b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li><a href="addproject.html">Add Project</a></li>
-                    <li><a href="viewallproject.html">View / Edit Project</a></li>
+                    <li><a href="{% url 'funds:AddProject' %}">Add Project</a></li>
+                    <li><a href="{% url 'funds:ViewAllProjects' %}">View / Edit Project</a></li>
                   </ul>
                 </li>
             </ul>
