--- a/PMS/accounts/templates/accounts/addstudents.html
+++ b/PMS/accounts/templates/accounts/addstudents.html
@@ -32,7 +32,7 @@
             <div class="wizard-container"> 
                 
                 <div class="card wizard-card ct-wizard-orange" id="wizardProfile">
-                    <form action="{% url 'accounts:AddStudent' %}" method="POST">
+                    <form action="{% url 'accounts:AddStudent' %}" method="Post">
                 <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
                         {% csrf_token %}
                         <div class="wizard-header">
@@ -67,65 +67,47 @@
                                   <div class="col-sm-6">
                                       <div class="form-group">
                                         <label>First Name <small>(required)</small></label>
-                                        <input name="firstname" type="text" class="form-control" placeholder="Andrew...">
-                                      </div>
+                                        {{ form.firstname }}
+                                      </div> 
                                       <div class="form-group">
                                         <label>Last Name <small>(required)</small></label>
-                                        <input name="lastname" type="text" class="form-control" placeholder="Smith...">
+                                        {{ form.lastname }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                           <label>Username <small>(required)</small></label>
-                                          <input name="username" type="text" class="form-control" placeholder="20XX12345" rel="gp" data-size="5" data-character-set="0-9,u">
+                                         {{ form.username }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
-                                          <label>Password <small>(required)</small></label>
-                                          <input name="password" type="text" class="form-control" placeholder="********" rel="gp" data-size="8" data-character-set="a-z,A-Z,0-9">
+                                          <label>Password1 <small>(required)</small></label>
+                                          {{ form.password1 }}
+                                      </div>
+                                  </div>
+                                  <div class="col-sm-10 col-sm-offset-1">
+                                      <div class="form-group">
+                                          <label>Password2 <small>(required)</small></label>
+                                          {{ form.password2 }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                          <div class="form-group">
                                             <label>Year</label><br>
-                                             <select name="country" class="form-control">
-                                                <option value="7"> 7 </option>
-                                                <option value="8"> 8 </option>
-                                                <option value="9"> 9 </option>
-                                                <option value="10"> 10 </option>
-                                                <option value="11"> 11 </option>
-                                                <option value="12"> 12 </option>
-                                            </select>
+                                             {{ form.year }}
                                           </div>
                                     </div>
                                     <div class="col-sm-10 col-sm-offset-1">
                                          <div class="form-group">
                                             <label>Section</label><br>
-                                             <select name="country" class="form-control">
-                                                <option value="A"> A </option>
-                                                <option value="B"> B </option>
-                                                <option value="C"> C </option>
-                                                <option value="D"> D </option>
-                                                <option value="E"> E </option>
-                                                <option value="F"> F </option>
-                                                <option value="G"> G </option>
-                                                <option value="H"> H </option>
-                                                <option value="I"> I </option>
-                                                <option value="10"> J </option>
-                                                <option value="K"> K </option>
-                                                <option value="L"> L </option>
-                                                <option value="M"> M </option>
-                                                <option value="N"> N </option>
-                                                <option value="SA"> Special A </option>
-                                                <option value="SB"> Special B </option>
-                                            </select>
+                                             {{ form.section }}
                                           </div>
                                     </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                           <label>Address <small>(required)</small></label>
-                                          <input name="address" type="text" class="form-control" placeholder="6866 Williams Street Fayetteville, NC 28303">
+                                          {{ form.address }}
                                       </div>
                                   </div>
                               </div>
@@ -137,23 +119,23 @@
                                     <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                         <label>First Name <small>(required)</small></label>
-                                        <input name="gfirstname" type="text" class="form-control" placeholder="Andrew...">
+                                        {{ form.gfirstname }}
                                       </div>
                                       <div class="form-group">
                                         <label>Last Name <small>(required)</small></label>
-                                        <input name="glastname" type="text" class="form-control" placeholder="Smith...">
+                                        {{ form.glastname }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                           <label>Address <small>(required)</small></label>
-                                          <input name="gaddress" type="text" class="form-control" placeholder="6866 Williams Street Fayetteville, NC 28303">
+                                          {{ form.gaddress }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                           <label>Contact number <small>(required)</small></label>
-                                          <input name="gcontact" type="text" class="form-control" placeholder="441-5656">
+                                          {{ form.gcontact }}
                                       </div>
                                   </div>
                                     
@@ -163,7 +145,7 @@
                                 <div class="row">
                                     <div class="col-sm-10 col-sm-offset-1">
                                         <h4 class="info-text"> If you have a sibling enrolled in the school, type in the oldest sibling. </h4>
-                                       <CENTER><label for="danger" class="btn btn-danger"> Yes <input type="checkbox" id="yes" value="Code"></label>
+                                       <CENTER><label for="danger" class="btn btn-danger"> Yes {{ form.sibling }}</label>
                                         <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no"></label value="Design"></CENTER> 
                                       
 
@@ -182,8 +164,8 @@
 
                                         <div class="col-sm-10 col-sm-offset-1" id = "schinfo" style="display:none;">
                                       <div class="form-group">
-                                        <label>Name <small>(required)</small></label>
-                                        <input name="gfirstname" type="text" class="form-control" placeholder="Andrew...">
+                                        <label>Scholarship <small>(required)</small></label>
+                                        {{ form.scholarship }}
                                       </div>
                                   </div>
                                     </div>
@@ -193,7 +175,7 @@
                                 <div class="row">
                                     <div class="col-sm-10 col-sm-offset-1">
                                         <h4 class="info-text"> Are you a member in any organization? </h4>
-                                       <CENTER><label for="danger" class="btn btn-danger"> Yes <input type="checkbox" id="yes-mem" value="Code"></label>
+                                       <CENTER><label for="danger" class="btn btn-danger"> Yes {{ form.band_member }}</label>
                                         <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no-mem"></label value="Design"></CENTER> 
                                       
 
