--- a/PMS/accounts/templates/accounts/base.html
+++ b/PMS/accounts/templates/accounts/base.html
@@ -31,7 +31,7 @@
                 </li>
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Funds <b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li><a href="{% url 'funds:AddFunds' %">Add Fund</a></li>
+                    <li><a href="{% url 'funds:AddFunds' %}">Add Fund</a></li>
                     <li><a href="{% url 'funds:ViewAllFunds' %}">View / Edit Fund</a></li>
                     <li><a href="{% url 'funds:AddPayment' %">Add Payment</a></li>
                   </ul>
