--- a/PMS/funds/templates/funds/addfunds.html
+++ b/PMS/funds/templates/funds/addfunds.html
@@ -32,7 +32,7 @@
             <div class="wizard-container"> 
                 
                 <div class="card wizard-card ct-wizard-orange" id="wizardProfile">
-                    <form action="" method="POST">
+                    <form action="{% url 'funds:AddFunds' %}" method="POST">
                 <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
                         {% csrf_token %}
                         <div class="wizard-header">
@@ -55,11 +55,11 @@
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                         <label>Fund Name <small>(required)</small></label>
-                                        <input name="fundname" type="text" class="form-control required" placeholder="Library Fee">
+                                        {{ form.fundname }}
                                       </div>
                                       <div class="form-group">
                                         <label>Cost <small>(required)</small></label>
-                                        <input name="cost" type="text" class="form-control required" placeholder="500">
+                                        {{ form.cost }}
                                       </div>    
                               </div>
                           </div>
