--- a/PMS/funds/templates/funds/addproject.html
+++ b/PMS/funds/templates/funds/addproject.html
@@ -60,7 +60,11 @@
                                       <div class="form-group">
                                         <label>Cost <small>(required)</small></label>
                                         <input name="cost" type="text" class="form-control required" placeholder="500">
-                                      </div>    
+                                      </div>
+                                      <div class="form-group">
+                                        <label>Receiver <small>(required)</small></label>
+                                        <input name="receiver" type="text" class="form-control required" placeholder="Library Fee">
+                                      </div>
                               </div>
                           </div>
                             </div>
