--- a/PMS/funds/templates/funds/addpayment.html
+++ b/PMS/funds/templates/funds/addpayment.html
@@ -32,7 +32,7 @@
             <div class="wizard-container"> 
                 
                 <div class="card wizard-card ct-wizard-orange" id="wizardProfile">
-                    <form action="" method="POST">
+                    <form action="{% url 'funds:AddPayment'%}" method="POST">
                 <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
                         {% csrf_token %}
                         <div class="wizard-header">
@@ -55,10 +55,15 @@
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                             <label>Student ID</label><br>
-                                             <select name="country" class="form-control">
-                                                <option value="student"> 201211234 </option>
+                                             <select name="studenttopay" class="form-control">
+                                                {% for object in object_list %}
+                                                    <option class="{% cycle '<option>' '' '' %}">
+                                                        {{ object.user }} {{ object.user }}
+                                                    </option>
+                                                {% endfor %}
+                                                <!-- <option value="student"> 201211234 </option>
                                                 <option value="student"> 201012345 </option>
-                                                <option value="student"> 201512345 </option>
+                                                <option value="student"> 201512345 </option> -->
                                             </select>
                                       </div>
                                       <div class="form-group">
